...
        android:layout_marginBottom="258dp"
        android:layout_marginEnd="27dp"
        android:onClick="showAlert"
        android:text="Logout"
        app:layout_constraintBottom_toTopOf="@+id/songPP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/databaseListView"
        android:layout_width="0dp"
        android:layout_height="339dp"
...
