...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="36dp"
        android:text="Memory Content"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtMovie"
        android:layout_width="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="63dp"
        android:text="Animal"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/txtMemory"
        app:layout_constraintTop_toTopOf="@+id/txtMemory"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

...
        app:layout_constraintStart_toStartOf="@+id/txtMovie"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:onClick="showAlert"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
...
